--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             username: 'toporkayt-dev', // Замените на ваш логин GitHub
             repository: 'Masha', // Замените на название репозитория
             branch: 'main', // Ветка репозитория (main или master)
-            imagesFolder: 'empty_folder' // Папка с изображениями в репозитории
+            imagesFolder: 'Images' // Папка с изображениями в репозитории
         };
 
         // Список 100 причин
