--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
         // Конфигурация - замените на данные вашего репозитория
         const GITHUB_CONFIG = {
             username: 'toporkayt-dev', // Замените на ваш логин GitHub
-            repository: 'Masha', // Замените на название репозитория
+            repository: 'Marii11', // Замените на название репозитория
             branch: 'main', // Ветка репозитория (main или master)
-            imagesFolder: 'Images' // Папка с изображениями в репозитории
+            imagesFolder: 'images' // Папка с изображениями в репозитории
         };
 
         // Список 100 причин
@@ -509,3 +509,4 @@
     </script>
 </body>
 </html>
+
