--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         </div>
 
         <div class="github-info">
-            <p><strong>Информация:</strong> Фотографии загружаются напрямую из репозитория GitHub. Убедитесь, что в папке <code>images</code> вашего репозитория есть файлы с именами <code>image1.jpg</code>, <code>image2.jpg</code> и т.д.</p>
+            <p><strong>Информация:</strong>
         </div>
 
         <div class="photo-gallery" id="photo-gallery">
@@ -509,4 +509,5 @@
     </script>
 </body>
 </html>
+
 
