--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         </div>
 
         <div class="github-info">
-            <p><strong>Информация:</strong>
+            <p><strong>Фотографии прекрасной девушки:</strong>
         </div>
 
         <div class="photo-gallery" id="photo-gallery">
@@ -509,5 +509,6 @@
     </script>
 </body>
 </html>
+
 
 
