--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <h2>Ты - моё счастье</h2>
             <p>Мария, каждый день с тобой - это подарок. Ты делаешь мою жизнь ярче, осмысленнее и счастливее. Я благодарен за каждую минуту, проведённую с тобой, и с нетерпением жду нашего будущего вместе.</p>
             <p>Я люблю тебя больше, чем слова могут выразить!</p>
-            <div class="signature">Твой любимый</div>
+            <div class="signature">Твой любимый, Сеня</div>
         </div>
     </div>
 
@@ -509,6 +509,7 @@
     </script>
 </body>
 </html>
+
 
 
 
